# smart-agriculture

./: .gitignore  README.md
lubancat/: CMakeLists.txt  main.cpp
lubancat/cmake/: aarch64-linux-gnu.cmake
lubancat/config/: config.json
lubancat/docs/: architecture_report.md  build_run_guide.md  control_ruels.md
lubancat/include/control/: controller.hpp
lubancat/include/core/: feature_engine.hpp  pipeline.hpp  thread_safe_queue.hpp
lubancat/include/datalog/: csv_writer.hpp
lubancat/include/protocol/: frame_codec.hpp
lubancat/include/utils/: json_config.hpp  logger.hpp
lubancat/src/control/: expert_rule_controller.cpp  ml_controller.cpp
lubancat/src/core/: feature_engine.cpp  pipeline.cpp
lubancat/src/datalog/: csv_writer.cpp
lubancat/src/protocol/: frame_codec.cpp
lubancat/src/utils/: json_config.cpp  logger.cpp
lubancat/uart/: uart.c  uart.h  uart_example.c
stm32f4/: CMakeLists.txt  README.md  sensor_demo.ioc
stm32f4/Core/Inc/: main.h
stm32f4/Core/Src/: adc.c  freertos.c  gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
stm32f4/app/: app_config.h  queues.c  queues.h  task_control.c  task_recv.c  task_send.c  task_sensor.c
stm32f4/cmake/stm32cubemx/: CMakeLists.txt
stm32f4/services/protocol/: frame_codec.c  frame_codec.h
stm32f4/services/pump/: pump_driver.c  pump_driver.h
stm32f4/services/sensors/: adapters.c  adapters.h  manager.c  manager.h
stm32f4/services/sensors/devices/: AHT30.c  AHT30.h  DHT22.c  DHT22.h  DS18B20.c  DS18B20.h  DS3231.c  DS3231.h  GY30.c  SoilHumidity.c  SoilHumidity.h  func_config.h
stm32f4/services/time/: time_service.c  time_service.h
stm32f4/services/uart_adapter/: uart_hal.c  uart_hal.h
